[tool.poetry]
name = "Vacant-room-finder"
version = "0.1.0"
description = ""
authors = ["Kyuzial <kyuzial@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
